# RV110x-Face-Detection

./: README.md  build-linux.sh
model/: tracker.rknn
python/: Yolo2RKNNdataset.py  convert.py  retinaface_dataset.txt
src/cpp/: CMakeLists.txt  main.cc  main.cc.bak  postprocess.cc  postprocess.h
src/cpp/rknpu1/: yolov5.cc
src/cpp/rknpu2/: yolov5_rv1106_1103.cc
src/utils/: image_drawing.c  image_utils.c
